@@ -51,6 +51,8 @@ Improvements
 
 * SOLR-17094: Close objects contained inside an ObjectCache.  (Vincent Primault)
 
+* SOLR-17063: Do not retain log param references in LogWatcher (Michael Gibney)
+
 Optimizations
 ---------------------
 * SOLR-17084: LBSolrClient (used by CloudSolrClient) now returns the count of core tracked as not live AKA zombies
